# Styx

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
apps/styx-cli/: Cargo.toml
apps/styx-cli/src/: args.rs  commands.rs  error.rs  events.rs  format.rs  headless.rs  ipc.rs  lib.rs  main.rs  model.rs  runtime.rs
apps/styx-cli/src/tui/: mod.rs  state.rs  view.rs
apps/styx-cli/tests/: args.rs  format.rs  headless.rs  ipc.rs  model_events.rs  run_modes.rs  runtime.rs  tui_state.rs  tui_view.rs
apps/styx-gui/: Cargo.toml  index.html  package.json  tauri.conf.json  vite.config.ts
apps/styx-gui/src/: App.tsx  commands.rs  error.rs  lib.rs  main.rs  main.tsx  state.rs  styles.css  tauri_commands.rs
apps/styx-gui/src/api/: client.ts  types.test.ts  types.ts
apps/styx-gui/src/components/: LogsPanel.tsx  PeerTable.tsx  PieceHeatmap.tsx  SettingsPanel.tsx  Shell.tsx  StatsPanel.tsx  Toolbar.tsx  TorrentDetail.tsx  TorrentTable.tsx
apps/styx-gui/src/lib/: format.test.ts  format.ts
apps/styx-gui/src/state/: reducer.test.ts  reducer.ts  store.ts
apps/styx-gui/tests/: backend.rs
crates/styx-app/: Cargo.toml
crates/styx-app/src/: commands.rs  error.rs  events.rs  format.rs  lib.rs  model.rs  runtime.rs
crates/styx-app/tests/: commands.rs  format.rs  model_events.rs  runtime.rs
crates/styx-core/: Cargo.toml
crates/styx-core/src/: choke.rs  endgame.rs  error.rs  lib.rs  manager.rs  peer.rs  picker.rs  piece_verifier.rs  pipeline.rs  privacy.rs  rate.rs  types.rs
crates/styx-core/tests/: piece_verifier_test.rs  privacy.rs
crates/styx-dht/: Cargo.toml
crates/styx-dht/src/: cache.rs  config.rs  error.rs  identity.rs  lib.rs  lookup.rs  message.rs  node.rs  routing.rs  runtime.rs  security.rs  socket.rs  store.rs  token.rs  transaction.rs  types.rs
crates/styx-dht/tests/: bootstrap.rs  cache.rs  config.rs  identity.rs  ipv6.rs  krpc.rs  lookup.rs  maintenance.rs  node.rs  rate_limit.rs  routing.rs  runtime.rs  security.rs  sim.rs  socket.rs  token_store.rs  transaction.rs  types.rs
crates/styx-disk/: Cargo.toml
crates/styx-disk/src/: block.rs  error.rs  hash.rs  layout.rs  lib.rs  manager.rs  merkle.rs  storage.rs  types.rs
crates/styx-disk/tests/: block_verify_test.rs  io_failure.rs
crates/styx-disk/tests/abuse/: corrupt_disk.rs  disk_pressure_tests.rs  mod.rs  resume_torture_tests.rs
crates/styx-ml/: Cargo.toml
crates/styx-ml/src/: error.rs  features.rs  lib.rs  manifest.rs  model.rs  normalize.rs  pipeline.rs  policy.rs  types.rs  window.rs
crates/styx-ml/tests/: features.rs  manifest.rs  model_policy.rs  normalize.rs  pipeline.rs  window.rs
crates/styx-proto/: Cargo.toml
crates/styx-proto/benches/: bencode_decode.rs
crates/styx-proto/src/: bencode.rs  extension.rs  file_tree.rs  hash_msg.rs  hybrid.rs  info_hash_v2.rs  lib.rs  magnet.rs  magnet_v2.rs  metadata.rs  metainfo.rs  peer.rs  pex.rs
crates/styx-proto/tests/: extension.rs  hybrid_metainfo_test.rs  integration.rs  magnet.rs  metadata.rs  pex.rs
crates/styx-proto/tests/fixtures/: multi_file.torrent  single_file.torrent
crates/styx-runtime/: Cargo.toml
crates/styx-runtime/src/: app.rs  config.rs  control.rs  daemon.rs  dht.rs  discovery.rs  download.rs  driver.rs  engine.rs  error.rs  intent.rs  lib.rs  lsd.rs  magnet.rs  metadata.rs  peer.rs  peer_io.rs  peer_table.rs  persist.rs  rate.rs  session.rs  settings.rs  smoke.rs  snapshot.rs  source.rs  task.rs  torrent.rs  tracker.rs  types.rs  web_seed.rs
crates/styx-runtime/src/supervision/: mod.rs  supervisor.rs  task_registry.rs  types.rs
crates/styx-runtime/tests/: abuse_tests.rs  app.rs  daemon.rs  dht_integration.rs  engine.rs  full_v1.rs  intent.rs  lsd.rs  magnet_resolution.rs  metadata_fetch.rs  multi_file.rs  peer_script.rs  persistence.rs  pex.rs  private_torrent.rs  real_network.rs  resume.rs  seeding.rs  session.rs  session_supervisor.rs  session_types.rs  settings.rs  smoke.rs  snapshot.rs  source.rs  torrent.rs  tracker.rs  types.rs  web_seed.rs
crates/styx-runtime/tests/abuse/: bad_web_seed_tests.rs  broken_tracker_tests.rs  corrupt_peer_tests.rs  large_torrent.rs  large_torrent_tests.rs  mock_peer.rs  mock_tracker.rs  mock_web_seed.rs  mod.rs  slow_peer_tests.rs
crates/styx-tracker/: Cargo.toml
crates/styx-tracker/src/: error.rs  http.rs  lib.rs  multitracker.rs  types.rs  udp.rs
crates/styx-utp/: Cargo.toml
crates/styx-utp/src/: connection.rs  error.rs  ledbat.rs  lib.rs  packet.rs  reorder.rs  resource.rs  retransmit.rs  rtt.rs  sack.rs  sim.rs  sizing.rs  socket.rs  types.rs
crates/styx-utp/tests/: interop.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bencode_decode.rs
sim/swarm-sim/: Cargo.toml  analyze.py
sim/swarm-sim/src/: main.rs
