[workspace]
resolver = "2"
members = [
    "crates/styx-app",
    "crates/styx-core",
    "crates/styx-dht",
    "crates/styx-utp",
    "crates/styx-ml",
    "crates/styx-disk",
    "crates/styx-tracker",
    "crates/styx-proto",
    "apps/styx-gui",
    "apps/styx-cli",
    "sim/swarm-sim",
]

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
bytes       = "1"
dashmap     = "6"
sled        = "0.34"
sha2        = "0.10"
sha1        = "0.10"
thiserror   = "2"
rand        = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = "0.3"
ratatui     = "0.29"
crossterm   = "0.28"
rand_chacha = "0.3"
rand_distr  = "0.4"
parquet     = "56"
arrow-array = "56"
arrow-schema = "56"
tempfile    = "3"
criterion   = "0.7"
percent-encoding = "2"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url         = "2"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
