[package]
name = "styx-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
styx-app = { path = "../../crates/styx-app" }
tauri = { version = "2", default-features = false, features = ["wry"] }
thiserror = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
