[package]
name = "styx-dht"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true }
styx-proto = { path = "../styx-proto" }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand_chacha = { workspace = true }
