[package]
name = "styx-disk"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
styx-proto = { path = "../styx-proto" }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
