[package]
name = "styx-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1"

[[bench]]
name = "bencode_decode"
harness = false
