[package]
name = "styx-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
styx-core = { path = "../styx-core" }
styx-disk = { path = "../styx-disk" }
styx-dht = { path = "../styx-dht" }
styx-app = { path = "../styx-app" }
styx-proto = { path = "../styx-proto" }
styx-tracker = { path = "../styx-tracker" }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
